network-policies/base/allow-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-api
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # Allow access to Kubernetes API server
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 443
